[package]
name = "Oaken"
version = "0.0.2-alpha"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "fs-all", "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12.1"
rspc = { version = "0.1.3", features = ["tauri"] }
tokio = { version = "1.34.0", features = ["rt"] }
specta = "1.0.5"
rand = "0.8.5"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "sqlite", "macros"] }
random_word = { version = "0.4.1", features = ["en"] }
lazy_static = "1.4.0"
async-once-cell = "0.5.3"
tap = "1.0.1"
toml = "0.8.8"
futures = { version = "0.3.30", features = ["std"] }
itertools = "0.12.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
